(library
 (name u01)
 (public_name randii.u01)
 (libraries randii)
 (modules u01)
)

(executable
 (name main)
 (libraries randii.u01)
 (foreign_stubs (language c) (names cstub))
 (flags :standard -linkall)
 (modes (native shared_object))
 (modules main))

(install
 (section lib)
 (files
  (main.so as librandii-u01.so)
  (cstub.h as randii-u01.h)))
